scroll to bottom messages fixed + scrollbar styled

--- a/public/styles.css
+++ b/public/styles.css
@@ -86,6 +86,12 @@ button {
     margin: 0px 30px;
 }
 
+#chat-messages {
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 500px;
+}
+
 #msgReceived {
     width: 100%;
     box-sizing: border-box;
@@ -95,6 +101,7 @@ button {
     border-style: none;
     z-index: -100;
     margin: 12px;
+    right: 0px;
 }
 
 #sidebarMenu {
@@ -107,4 +114,23 @@ button {
     overflow-y: auto;
     overflow-x: hidden;
     height: 100vh;
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+    margin: 0px 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #313131;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4f365c;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(105, 72, 121)a;
 }
